--- a/MMHS_Event_App/Base.lproj/Main.storyboard
+++ b/MMHS_Event_App/Base.lproj/Main.storyboard
@@ -43,7 +43,7 @@
                                                         <constraint firstAttribute="height" constant="128" id="Wox-TO-Hji"/>
                                                     </constraints>
                                                 </view>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="studentImage" translatesAutoresizingMaskIntoConstraints="NO" id="Yir-za-D3z" customClass="ProfilePicImageView" customModule="MMHS_Event_App" customModuleProvider="target">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profilePic" translatesAutoresizingMaskIntoConstraints="NO" id="Yir-za-D3z" customClass="ProfilePicImageView" customModule="MMHS_Event_App" customModuleProvider="target">
                                                     <rect key="frame" x="15" y="208" width="100" height="100"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="100" id="Ikn-B7-ecg"/>
@@ -303,7 +303,7 @@
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="studentImage" translatesAutoresizingMaskIntoConstraints="NO" id="5Qf-Em-Gbt" customClass="ProfilePicImageView" customModule="MMHS_Event_App" customModuleProvider="target">
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="profilePic" translatesAutoresizingMaskIntoConstraints="NO" id="5Qf-Em-Gbt" customClass="ProfilePicImageView" customModule="MMHS_Event_App" customModuleProvider="target">
                                                 <rect key="frame" x="110" y="168" width="100" height="100"/>
                                             </imageView>
                                         </subviews>
@@ -556,6 +556,6 @@
         <image name="cloudsImage" width="320" height="568"/>
         <image name="eventImage" width="160" height="160"/>
         <image name="icloudImage" width="124" height="84"/>
-        <image name="studentImage" width="50" height="50"/>
+        <image name="profilePic" width="100" height="100"/>
     </resources>
 </document>
