Implement Mapview in ExloreViewController

--- a/MMHS_Event_App/Base.lproj/Main.storyboard
+++ b/MMHS_Event_App/Base.lproj/Main.storyboard
@@ -282,9 +282,23 @@
                     <view key="view" contentMode="scaleToFill" id="VpJ-fi-FtM">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="MuD-Wr-dFg">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </mapView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="MuD-Wr-dFg" firstAttribute="leading" secondItem="VpJ-fi-FtM" secondAttribute="leadingMargin" constant="-16" id="IYs-OW-xGx"/>
+                            <constraint firstItem="MuD-Wr-dFg" firstAttribute="top" secondItem="VpJ-fi-FtM" secondAttribute="topMargin" id="Ivx-gS-b9B"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="MuD-Wr-dFg" secondAttribute="trailing" constant="-16" id="qMX-3A-68b"/>
+                            <constraint firstItem="MuD-Wr-dFg" firstAttribute="bottom" secondItem="VpJ-fi-FtM" secondAttribute="bottomMargin" id="sjl-HO-Sux"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="jPU-RA-oKX"/>
+                    <connections>
+                        <outlet property="mapView" destination="MuD-Wr-dFg" id="dtY-DV-yJg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mEL-mI-9zO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
